syntax = "proto3";

package shopnexus;

option go_package = "shopnexus-go-service/gen/pb";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
  OTHER = 3;
}

message TokenResponse {
  string token = 1;
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  Gender gender = 5;
  string full_name = 6;
}

message RegisterAdminRequest {
  string username = 1;
  string password = 2;
}

message LoginUserRequest {
  optional string username = 1;
  optional string email = 2;
  optional string phone = 3;
  string password = 4;
}

message LoginAdminRequest {
  string username = 1;
  string password = 2;
}

service Account {
  rpc LoginUser(LoginUserRequest) returns (TokenResponse) {}
  rpc LoginAdmin(LoginAdminRequest) returns (TokenResponse) {}
  rpc RegisterUser(RegisterUserRequest) returns (TokenResponse) {}
  rpc RegisterAdmin(RegisterAdminRequest) returns (TokenResponse) {}
}